Added link to project 1 git repo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       						</a>
       					</div>
       					<div class="col-md-6">
-      						<a href="#">
+      						<a href="https://github.com/ilsteiner/project1">
       							<button class="btn btn-primary btn-lg"><i class="fa fa-github"></i>Source</button>
       						</a>
       					</div>
