--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Project 1</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,13 +32,13 @@
       			<div role="tabpanel" class="tab-pane active" id="project1">
       				<div class="row">
       					<div class="col-md-6">
-      						<a href="#">
-      							<button class="btn btn-danger btn-lg"><i class="fa fa-youtube"></i>View</button>
+      						<a class="btn btn-danger btn-lg" href="#">
+      							<i class="fa fa-youtube"></i>View
       						</a>
       					</div>
       					<div class="col-md-6">
-      						<a href="https://github.com/ilsteiner/project1">
-      							<button class="btn btn-primary btn-lg"><i class="fa fa-github"></i>Source</button>
+      						<a class="btn btn-primary btn-lg" href="https://github.com/ilsteiner/project1">
+      							<i class="fa fa-github"></i>Source
       						</a>
       					</div>
       				</div>      			
@@ -47,13 +46,13 @@
 			    <div role="tabpanel" class="tab-pane" id="project2">
 			    	<div class="row">
       					<div class="col-md-6">
-      						<a href="#">
-      							<button class="btn btn-danger btn-lg"><i class="fa fa-youtube"></i>View</button>
+      						<a class="btn btn-danger btn-lg" href="#">
+      							<i class="fa fa-youtube"></i>View
       						</a>
       					</div>
       					<div class="col-md-6">
-      						<a href="#">
-      							<button class="btn btn-primary btn-lg"><i class="fa fa-github"></i>Source</button>
+      						<a class="btn btn-primary btn-lg" href="#">
+      							<i class="fa fa-github"></i>Source
       						</a>
       					</div>
       				</div>  
@@ -61,13 +60,13 @@
 			    <div role="tabpanel" class="tab-pane" id="project3">
 			    	<div class="row">
       					<div class="col-md-6">
-      						<a href="#">
-      							<button class="btn btn-danger btn-lg"><i class="fa fa-youtube"></i>View</button>
+      						<a class="btn btn-danger btn-lg" href="#">
+      							<i class="fa fa-youtube"></i>View
       						</a>
       					</div>
       					<div class="col-md-6">
-      						<a href="#">
-      							<button class="btn btn-primary btn-lg"><i class="fa fa-github"></i>Source</button>
+      						<a class="btn btn-primary btn-lg" href="#">
+      							<i class="fa fa-github"></i>Source
       						</a>
       					</div>
       				</div>  
@@ -75,13 +74,13 @@
 			    <div role="tabpanel" class="tab-pane" id="project4">
 			    	<div class="row">
       					<div class="col-md-6">
-      						<a href="#">
-      							<button class="btn btn-danger btn-lg"><i class="fa fa-youtube"></i>View</button>
+      						<a class="btn btn-danger btn-lg" href="#">
+      							<i class="fa fa-youtube"></i>View
       						</a>
       					</div>
       					<div class="col-md-6">
-      						<a href="#">
-      							<button class="btn btn-primary btn-lg"><i class="fa fa-github"></i>Source</button>
+      						<a class="btn btn-primary btn-lg" href="#">
+      							<i class="fa fa-github"></i>Source
       						</a>
       					</div>
       				</div>  
