Added YouTube logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     	</div>
       <div class="row">
       	<div class="col-sm-2 text-xs-center">
-      		<img src="img/isaac-circle.png" class="img-circle img-rounded me" alt="A picture of me">
+      		<img src="img/isaac-circle.jpg" class="img-circle img-rounded me" alt="A picture of me">
       	</div>
       	<div class="col-sm-10">
       		<ul class="nav nav-tabs" role="tablist">
@@ -32,7 +32,7 @@
       			<div role="tabpanel" class="tab-pane active" id="project1">
       				<div class="row">
       					<div class="col-md-6">
-      						<a class="btn btn-danger btn-lg" href="#">
+      						<a class="btn btn-danger btn-lg" href="https://youtu.be/Cq-orMj-ee4">
       							<i class="fa fa-youtube"></i>View
       						</a>
       					</div>
