Updated for project 2 links

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Project 1</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,8 +32,8 @@
       			<div role="tabpanel" class="tab-pane active" id="project1">
       				<div class="row">
       					<div class="col-md-6">
-      						<a href="#">
-      							<button class="btn btn-danger btn-lg"><i class="fa fa-youtube"></i>View</button>
+      						<a class="btn btn-danger btn-lg" href="#">
+      							<button ><i class="fa fa-youtube"></i>View</button>
       						</a>
       					</div>
       					<div class="col-md-6">
@@ -47,12 +46,12 @@
 			    <div role="tabpanel" class="tab-pane" id="project2">
 			    	<div class="row">
       					<div class="col-md-6">
-      						<a href="#">
+      						<a href="https://youtu.be/yHdiKyokYIk">
       							<button class="btn btn-danger btn-lg"><i class="fa fa-youtube"></i>View</button>
       						</a>
       					</div>
       					<div class="col-md-6">
-      						<a href="#">
+      						<a href="https://github.com/ilsteiner/project2">
       							<button class="btn btn-primary btn-lg"><i class="fa fa-github"></i>Source</button>
       						</a>
       					</div>
