Added links for p2

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
       					<div class="col-md-6">
       						<a href="https://github.com/ilsteiner/project2">
       							<button class="btn btn-primary btn-lg"><i class="fa fa-github"></i>Source</button>
-      						<a class="btn btn-danger btn-lg" href="#">
+      						<a class="btn btn-danger btn-lg" href="https://youtu.be/yHdiKyokYIk">
       							<i class="fa fa-youtube"></i>View
       						</a>
       					</div>
       					<div class="col-md-6">
-      						<a class="btn btn-primary btn-lg" href="#">
+      						<a class="btn btn-primary btn-lg" href="https://github.com/ilsteiner/project1">
       							<i class="fa fa-github"></i>Source
       						</a>
       					</div>
