Update for project 3

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 			    <div role="tabpanel" class="tab-pane" id="project3">
 			    	<div class="row">
       					<div class="col-md-6">
-      						<a class="btn btn-danger btn-lg" href="#">
+      						<a class="btn btn-danger btn-lg" href="https://youtu.be/BTEqbghy_ys">
       							<i class="fa fa-youtube"></i>View
       						</a>
       					</div>
       					<div class="col-md-6">
-      						<a class="btn btn-primary btn-lg" href="#">
+      						<a class="btn btn-primary btn-lg" href="https://github.com/ilsteiner/project3">
       							<i class="fa fa-github"></i>Source
       						</a>
       					</div>
