Updated for project 4

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
 			    <div role="tabpanel" class="tab-pane" id="project4">
 			    	<div class="row">
       					<div class="col-md-6">
-      						<a class="btn btn-danger btn-lg" href="#">
+      						<a class="btn btn-danger btn-lg" href="https://youtu.be/Zh7GxjyvQ8E">
       							<i class="fa fa-youtube"></i>View
       						</a>
       					</div>
       					<div class="col-md-6">
-      						<a class="btn btn-primary btn-lg" href="#">
+      						<a class="btn btn-primary btn-lg" href="https://github.com/ilsteiner/project4">
       							<i class="fa fa-github"></i>Source
       						</a>
       					</div>
